# Aura-SE

./: .gitattributes  LICENSE  README.md  Welcome to Aura SDK.doc  addoninfo.txt  rmx_map_log_remover.bat
.github/: readme.txt
.github/workflows/: c-cpp.yml  greetings.yml  linux.yml  mac.yml  macOS.yml  macOS2.yml  msbuild.yml  windows.yml
ContentTest/: readme.txt
Decompiled Models/blue/: jq.smd
Mac Workspace.xcworkspace/: contents.xcworkspacedata
Map Sources/: Bounce.map  Bounce.max  Bounce.rmf  City.max  City.rmf  City.rmx  Cove.max  Cove.rmf  Cove.rmx  Crossfire.map  Crossfire.max  Crossfire.rmf  Crossfire.rmx  Datacore.rmf  Guardian.max  Guardian.rmf  zamnhlmp_crossfire.ext  zamnhlmp_crossfire.map  zamnhlmp_crossfire.max  zamnhlmp_crossfire.prt  zamnhlmp_crossfire.rmf  zamnhlmp_crossfire.wa_  zamnhlmp_disco.ext  zamnhlmp_disco.map  zamnhlmp_disco.prt  zamnhlmp_disco.rmx  zamnhlmp_disco.wa_  zamnhlmp_halo3_guardian.ext  zamnhlmp_halo3_guardian.map  zamnhlmp_halo3_guardian.max  zamnhlmp_halo3_guardian.prt  zamnhlmp_halo3_guardian.rmx  zamnhlmp_halo3_guardian.wa_  zamnhlmp_wesleyshrine.ext  zamnhlmp_wesleyshrine.map  zamnhlmp_wesleyshrine.max  zamnhlmp_wesleyshrine.prt  zamnhlmp_wesleyshrine.wa_
Map Sources/credits/: Credits.rmx  Shooter Tourneys Credits.rmf
MapFiles/: .gitignore  Bounce.rmf  Bounce_Day.rmf  City.rmf  Cloaca.rmf  Crossfire.rmf  Datacore.rmf  Flashback.rmf  Frenzy.rmf  Leveled.map  Leveled.rmf  Orbitra.rmf  Orbitra2.rmf  Penguin_Pit.rmf  Sewers.rmf  Snark_Pit.rmf  Snowfire.rmf  Subtarnsit.rmf  Subtransit.rmf  chroma_key.rmf  mp_ascension.rmf  mp_fish.rmf  mp_trampoline.rmf
MapFiles/bonkfire/: Bonkfire.rmf
MapFiles/credits/: Credits.rmf
MapFiles/legacy/: Corssfire.rmf  Crossfire_Day.rmf  Dev.rmf  Guardian.rmf  Orbitra.rmf
MapFiles/ref/: mp_desert02.rmf
MapSources/: Bounce.rmf  City.rmf  Corssfire.rmf  Cove.rmf  Gasworks.rmf  Mall.rmf  Shipment.rmf  Subtarnsit.rmf  Walk.rmf
ModelSources/: readme.txt
ModelSources/3dm_hossie02/: Hgrunt.qc  grunt(reference).smd
ModelSources/red/: Zeke.qc
Server DLL (VS2019)/: CMakeLists.txt
Server DLL (VS2019)/CMake/: helpers.cmake
Server DLL (VS2019)/common/: CMakeLists.txt
Server DLL (VS2019)/dlls/: CMakeLists.txt  agcommand.cpp  aggamemode.cpp  aggamerules.cpp  agglobal.cpp  filenames  gamerules.cpp  multiplay_gamerules.h  player.cpp  weapons.h
Server DLL (VS2019)/dlls/wpn_shared/: CMakeLists.txt
Server DLL (VS2019)/game_shared/: CMakeLists.txt
Server DLL (VS2019)/game_shared/bot/: CMakeLists.txt
Server DLL (VS2019)/pm_shared/: CMakeLists.txt
Server DLL (VS2019)/projects/vs2019/: Aura.sln  agdll.vcxproj  agdll.vcxproj.filters
Server DLL (VS2019)/public/: CMakeLists.txt
Server DLL (VS2019)/public/cl_dll/: CMakeLists.txt
Server DLL (VS2019)/public/steam/: CMakeLists.txt
SourceCode/: README.md
SourceCode/common/: Sequence.h  com_model.h  const.h  entity_state.h  in_buttons.h  mathlib.h  usercmd.h
SourceCode/dlls/: agarena.cpp  agbusters.cpp  agbusters.h  agclient.cpp  agcommand.cpp  agctf.cpp  agdom.cpp  agfiesta.cpp  agfiesta.h  agfirefight.cpp  agfirefight.h  agfirefight_cache.cpp  agfirefight_spawner.cpp  agfirefight_spawner.h  aggamemode.cpp  aggamemode.h  aggamerules.cpp  aggamerules.h  agglobal.cpp  agglobal.h  aghideandseek.cpp  agmatch.cpp  agrunt.cpp  agsettings.cpp  agswat.cpp  agswat.h  agvote.cpp  animation.cpp  apache.cpp  barnacle.cpp  barney.cpp  basemonster.h  bigmomma.cpp  br.cpp  bullsquid.cpp  cbase.cpp  cbase.h  cdll_dll.h  client.cpp  combat.cpp  (+62 more)
SourceCode/engine/: edict.h  eiface.h  progdefs.h  shake.h  studio.h
SourceCode/game_shared/: voice_common.h  voice_gamemgr.cpp  voice_gamemgr.h
SourceCode/linux/: Makefile  aura  readme.txt
SourceCode/pm_shared/: pm_defs.h  pm_movevars.h  pm_shared.cpp
SourceCode/projects/: readme.md
TextureSources/romawad/: anub.psd  wallmatteblack.psd  zexbanner.psd
TextureSources/sewerswad/: tex1.psd  tex10.psd  tex11.psd  tex2.psd  tex3.psd  tex4.psd  tex5.psd  tex6.psd  tex7.psd
Tools/HalfLifeBSPTextureTools/: readme.txt
Tools/Harbinger/: Harbinger
Tools/Spectra/: Spectra
Tools/WorkshopMan/: steam_appid.txt
Tools/png2tga/: png2tga_linux  readme.txt
binary/: Aura.sln  README.md  SINGLEPLAYER.md
binary/cl_dll/: CMakeLists.txt  Exports.h  GameStudioModelRenderer.cpp  MOTD.cpp  StudioModelRenderer.cpp  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  bench.h  cdll_int.cpp  cl_dll.h  cl_util.h  com_weapons.h  death.cpp  demo.cpp  entity.cpp  ev_hldm.cpp  flashlight.cpp  geiger.cpp  global_consts.h  health.cpp  hud.cpp  hud.h  hud_bench.cpp  hud_benchtrace.cpp  hud_benchtrace.h  hud_iface.h  hud_msg.cpp  hud_redraw.cpp  hud_servers.cpp  hud_spectator.cpp  hud_spectator.h  in_camera.cpp  in_defs.h  input.cpp  inputw32.cpp  interpolation.cpp  interpolation.h  menu.cpp  (+25 more)
binary/client/: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
binary/common/: Platform.h  con_nprint.h  const.h  cvardef.h  enums.h  hltv.h  ivoicetweak.h  mathlib.h  nowin.h  port.h  r_efx.h  r_studioint.h
binary/dlls/: CEagle.cpp  CEagle.h  CEagleLaser.cpp  CGrapple.cpp  CM249.cpp  CPenguin.cpp  UserMessages.h  aflock.cpp  ag.def  agadmin.cpp  agadmin.h  agadmincache.cpp  agadmincache.h  agarena.cpp  agarena.h  agclient.cpp  agclient.h  agcommand.cpp  agctf.cpp  (+147 more)
dlls/: agctf.cpp  aggamerules.cpp  agglobal.cpp  agglobal.h  agmatch.cpp  gamerules.cpp  mp5.cpp  player.cpp  spawnchooser.cpp  spawnchooser.h  weapons.h
maps/: .gitignore  Blimpboom.rmf  Bounce.max  Bounce.rmf  Bounce.rmx  Bounce_Day.map  Bounce_Day.rmf  Bounce_Day.rmx  CTF_Crossfire.map  CTF_Crossfire.max  CTF_Crossfire.rmf  CTF_Crossfire.rmx  Chiron.rmf  City.map  City.max  City.rmf  City.rmx  Corssfire.rmf  Cove.map  Cove.rmf  Cove_Night.rmf  Crossfire.map  Crossfire.max  Crossfire.rmf  Crossfire.rmx  Crossfire_Day.map  Crossfire_Day.max  Crossfire_Day.rmf  Crossfire_Day.rmx  Datacore.rmf  Dev.map  Dev.rmf  Disco.rmf  Doublefort.rmf  Flashback.map  Flashback.max  Flashback.rmf  Flashback.rmx  Frenzy.rmf  Gasworks.rmf  (+18 more)
models/: readme.txt
(+1149 files in other folders)
