add_subdirectory(wpn_shared)

add_sources(
activity.h
activitymap.h
aflock.cpp
ag.def
ag.dsp
agadmin.cpp
agadmin.h
agadmincache.cpp
agadmincache.h
agarena.cpp
agarena.h
agclient.cpp
agclient.h
agcommand.cpp
agcommand.h
agctf.cpp
agctf.h
agdom.cpp
agdom.h
aggame.cpp
aggame.h
aggamemode.cpp
aggamemode.h
aggamerules.cpp
aggamerules.h
aggl.def
agglobal.cpp
agglobal.h
aginfointermission.cpp
aginfointermission.h
aglms.cpp
aglms.h
agmatch.cpp
agmatch.h
agrunt.cpp
agscore.cpp
agscore.h
agscorecache.cpp
agscorecache.h
agscorelog.cpp
agscorelog.h
agsettings.cpp
agsettings.h
agspectator.cpp
agstats.cpp
agstats.h
agsuddendeath.cpp
agsuddendeath.h
agtimeout.cpp
agtimeout.h
agtimer.cpp
agtimer.h
agvote.cpp
agvote.h
agwallhack.cpp
agwallhack.h
airtank.cpp
AI_BaseNPC_Schedule.cpp
animating.cpp
animation.cpp
animation.h
apache.cpp
barnacle.cpp
barney.cpp
basemonster.h
bigmomma.cpp
bloater.cpp
bmodels.cpp
bullsquid.cpp
buttons.cpp
cbase.cpp
cbase.h
cdll_dll.h
client.cpp
client.h
combat.cpp
controller.cpp
crossbow.cpp
crowbar.cpp
decals.h
defaultai.cpp
defaultai.h
doors.cpp
doors.h
effects.cpp
effects.h
egon.cpp
enginecallback.h
explode.cpp
explode.h
extdll.h
filenames
flyingmonster.cpp
flyingmonster.h
func_break.cpp
func_break.h
func_tank.cpp
game.cpp
game.h
gamerules.cpp
gamerules.h
gargantua.cpp
gauss.cpp
genericmonster.cpp
ggrenade.cpp
globals.cpp
glock.cpp
gman.cpp
handgrenade.cpp
hassassin.cpp
headcrab.cpp
healthkit.cpp
hgrunt.cpp
hornet.cpp
hornet.h
hornetgun.cpp
houndeye.cpp
h_ai.cpp
h_battery.cpp
h_cine.cpp
h_cycler.cpp
h_export.cpp
ichthyosaur.cpp
islave.cpp
items.cpp
items.h
leech.cpp
lights.cpp
maprules.cpp
maprules.h
monsterevent.h
monstermaker.cpp
monsters.cpp
monsters.h
monsterstate.cpp
mortar.cpp
mp5.cpp
mpstubb.cpp
multiplay_gamerules.cpp
multiplay_gamerules.h
nihilanth.cpp
nodes.cpp
nodes.h
observer.cpp
osprey.cpp
pathcorner.cpp
plane.cpp
plane.h
plats.cpp
player.cpp
player.h
playermonster.cpp
python.cpp
rat.cpp
roach.cpp
rpg.cpp
satchel.cpp
saverestore.h
schedule.cpp
schedule.h
scientist.cpp
scripted.cpp
scripted.h
scriptevent.h
shotgun.cpp
singleplay_gamerules.cpp
singleplay_gamerules.h
skill.cpp
skill.h
sound.cpp
soundent.cpp
soundent.h
spawnchooser.cpp
spawnchooser.h
spectator.cpp
spectator.h
squad.h
squadmonster.cpp
squadmonster.h
squeakgrenade.cpp
stats.cpp
subs.cpp
talkmonster.cpp
talkmonster.h
teamplay_gamerules.cpp
teamplay_gamerules.h
tempmonster.cpp
tentacle.cpp
trains.h
triggers.cpp
tripmine.cpp
turret.cpp
util.cpp
util.h
vector.h
weapons.cpp
weapons.h
world.cpp
wpn_shared
Wxdebug.cpp
wxdebug.h
xen.cpp
zamn.cpp
zombie.cpp
)